2015-12-10  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-382
	
	* src/rte.cc:  Did some code review and I found that polarized NLTE
	was treated inconsistently between (emission_rtstep) and the 
	jacobian calculations.  It was assumed that the source term is 
	unpolarized, solving this expression for polarized terms:
	"iy(iv,i) = tt[i] - t(iv,i,0) * ( bbar[iv] + J_n[i] );"
	but if J_n is polarized, the correct expression should be
	"iy(iv,i) = tt[i] + tmp(i,0) * bbar[iv] + J_bar[i];",
	with id_mat(tmp); tmp-=t(iv,joker,joker); and 
	mult(J_bar, tmp, J_n);
	
	This is now changed in (emission_rtstep).

2015-12-07  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-381
	
	* src/{m_linerecord,methods}.cc:  Added 
	abs_linesSetParameterForMatchingLines to set individual line 
	parameters for matching lines.  Also added pressure exponents 
	to the list of supported parameters.
	
	* src/pressurebroadeningdata.{cc,h}:  Added some functions to
	easier set parameters.

2015-12-04  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-380
	
	For iyEmissionStandard only now...
	Made a function (get_ppath_pmat_and_tmat) that replaces the 
	combination of get_ppath_pmat, the wind correction and the
	transmission matrix calculations.  It also takes over 
	calculations of partial derivatives from iyEmissionStandard.
	This applies not only to the partial derivatives of type
	"from propmat" but also to "analytical" partial derivatives.
	Patrick, I need you to check that I am not messing something
	up here.  In particular regarding cases where the parameter
	is perturbed might behave strange in an unintended manner.
	
	This all results in small changes in the behaviour of "analytical"
	for fully polarized signals (order of magnitude, the change is on
	a level of 1e-5 in my simple tests.).  The tests in wfun still
	works.
	
	* src/jacobian.cc:  Changed an error call because it helped me
	debug.
	
	* src/m_rte.cc:  get_ppath_pmat and tmat calculations replaced